<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/list_card"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="328dp"
        android:layout_height="155dp"
        android:background="@color/card_home_color"
        android:alpha="0.3"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="226dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_sensacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="245dp"
                android:layout_marginStart="40dp"
                android:text="@string/txt_sensacao"
                android:textSize="14sp"
                android:textColor="@color/text_home_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="245dp"
                android:layout_marginStart="293dp"
                android:text="@string/txt_num_sensacao"
                android:textSize="14sp"
                android:textColor="@color/text_home_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txt_max_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="278dp"
                android:layout_marginStart="40dp"
                android:text="@string/txt_max_min"
                android:textSize="14sp"
                android:textColor="@color/text_home_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txt_num_max_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="278dp"
                android:layout_marginStart="293dp"
                android:text="@string/txt_num_max_min"
                android:textSize="14sp"
                android:textColor="@color/text_home_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txt_umidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="311dp"
                android:layout_marginStart="40dp"
                android:text="@string/txt_umidade"
                android:textSize="14sp"
                android:textColor="@color/text_home_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txt_num_sensacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="311dp"
                android:layout_marginStart="293dp"
                android:text="@string/txt_num_sensacao"
                android:textSize="14sp"
                android:textColor="@color/text_home_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txt_visibilidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="344dp"
                android:layout_marginStart="40dp"
                android:text="@string/txt_visibilidade"
                android:textSize="14sp"
                android:textColor="@color/text_home_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txt_num_visibilidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="344dp"
                android:layout_marginStart="293dp"
                android:text="@string/txt_num_visibilidade"
                android:textSize="14sp"
                android:textColor="@color/text_home_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>